@@ -50,7 +50,7 @@ test.subdir(['docs'])
 test.write(['SConstruct'], """\
 import os
 
-env = Environment(ENV = { 'PATH' : os.environ['PATH'] })
+env = Environment()
 
 env.PDF('docs/Fig1.eps')
 test = env.PDF(source='docs/test.tex')
